@@ -46,15 +46,12 @@ def checkAuth(write = False, admin = False):
         def wrapper(self, **kwargs):
             # XXX two xmlrpc calls here could possibly be condensed to one
             # first check the password only
-            ugList = []
-            for serverName in self.serverNameList:
-                ugList += self.repos.getUserGroups(serverName)
-            if not ugList:
+            if not self.repServer.auth.check(self.authToken):
                 raise InvalidPassword
             # now check for proper permissions
-            if write or admin:
-                if not self.repServer.auth.check(self.authToken, write=write, admin=admin):
-                    raise InsufficientPermission
+            if not self.repServer.auth.check(self.authToken, write=write,
+                                             admin=admin):
+                raise InsufficientPermission
 
             return func(self, **kwargs)
         return wrapper
@@ -128,13 +125,8 @@ class HttpHandler(WebHandler):
             self.req.write(output)
             return apache.OK
         except InsufficientPermission:
-            if auth[0] == "anonymous":
-                # if an anonymous user raises InsufficientPermission,
-                # ask for a real login.
-                return self._requestAuth()
-            else:
-                # if a real user raises InsufficientPermission, forbid access.
-                return apache.HTTP_FORBIDDEN
+            # ask for a real login.
+            return self._requestAuth()
         except InvalidPassword:
             # if password is invalid, request a new one
             return self._requestAuth()
